# HR-Policy-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
evaluation/: eval_dataset.py  eval_dataset_v2.py  evaluation_results.csv  evaluation_v2.py
src/: main.py
src/api/: models.py
src/core/: config.py  dependencies.py
src/generator/: llm.py
src/prompts/: create_filter.py  generator.py
src/rag/: chunking.py  embedding.py  hybrid_search.py  loader.py  pipeline.py  reranker.py  retrieval.py
src/ui/: app.py  app_archived.py
src/utils/: filter.py  reindexing.py
